internal/xds/translator/testdata/out/xds-ir/http-route-request-headers.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: request-header-route
      requestHeadersToAdd:
      - header:
          key: some-header
          value: some-value
      - header:
          key: some-header-2
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: some-header3
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: some-header4
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: empty-header
        keepEmptyValue: true
      requestHeadersToRemove:
      - some-header5
      - some-header6
      route:
        cluster: request-header-route-dest
